# Autonomy

algorithm/backjoon/: 1022.cpp  1024.cpp
autonomy-2d-object-detection-main/autonomy-2d-object-detection-main/: CMakeLists.txt  README.md  package.xml
autonomy-2d-object-detection-main/autonomy-2d-object-detection-main/include/: neu_detection.h
autonomy-2d-object-detection-main/autonomy-2d-object-detection-main/launch/: yolov5.launch.py
autonomy-2d-object-detection-main/autonomy-2d-object-detection-main/params/: camera_params.yaml  coordinates_transform.yaml  object_detection.yaml
autonomy-2d-object-detection-main/autonomy-2d-object-detection-main/services/: autonomy-2d-object-detection.service  autonomy-2d-object-detection.sh  autonomy-perception-module-transform.service  autonomy-perception-module-transform.sh
autonomy-2d-object-detection-main/autonomy-2d-object-detection-main/src/: neu_detection_core.cpp  nvds_detection.cpp
autonomy-3d-perception-main/: CMakeLists.txt  package.xml
autonomy-3d-perception-main/config/: combine_ground_for_seg_fusion_parameter.yaml  curb_detection_parameter.yaml  depth_extrinsic_params.yaml  obstacles_detection_parameter.yaml  point_rotation_L_parameter.yaml  point_rotation_R_parameter.yaml
autonomy-3d-perception-main/include/obstacles_detection/: combine_object.h  post_filtering.h
autonomy-3d-perception-main/include/util/: dbscan_phase.h  point_rotation.h  range_region.h  range_util.h
autonomy-3d-perception-main/launch/: curb_detection.launch.py  depth_total_system.launch.py  obstacles_detection.launch.py  rtabmap.launch.py  seg_fusion.launch.py  test_depth_total_system.launch.py  tf_publish_test.launch.py
autonomy-deepstream-manager-main/: CMakeLists.txt  README.md  package.xml
autonomy-deepstream-manager-main/engine/config/segmentation/: campus_multiclass.txt  city_ddrnet_curb.txt  city_ddrnet_infer_config.txt  golf_cls4.txt  golf_multiclass.txt  jinchen_ddrent_23_slim.txt  private.txt  private_multicam.txt  samchoek_ddrnet_infer_config.txt  superslim.txt
autonomy-deepstream-manager-main/include/: neu_2d_img_subs.h  neu_deepstream_core.h  neu_perception_2d.h
autonomy-deepstream-manager-main/include/pipeline/: deepstream_manager_pipeline.h  perception_2d_parameter.h  pipeline_parameter.h
autonomy-deployment-utils-main/: disable_services.sh  docker-compose.yaml  enable_services.sh  filename.yaml  get-docker.sh  install_requirements.sh  prometheus.yaml  requirements.txt  reset_bashrc.sh  update_binary.sh  update_config_files.sh
autonomy-perception-2d-main/: CMakeLists.txt  README.md  package.xml
autonomy-perception-2d-main/include/: neu_2d_perception.h
autonomy-perception-2d-main/include/camera_calibration/: inverse_perspective_mapping.h
autonomy-perception-2d-main/launch/: detection_transformer.launch.py  perception_2d.launch.py
autonomy-perception-2d-main/params/: coordinates_transform.yaml  default_transform_params.yaml  perception_2d.yaml
autonomy-perception-2d-main/services/: autonomy-perception-2d.sh  autonomy-perception-module-detection-transformer.service  autonomy-perception-module-detection-transformer.sh  autonomy-perception_2d.service
autonomy-perception-2d-main/src/: neu_2d_perception_core.cpp  nvds_2d_perception.cpp
autonomy-perception-2d-main/src/camera_calibration/: inverse_perspective_mapping.cpp
autonomy-perception-module-main/: CMakeLists.txt  package.xml
autonomy-perception-module-main/config/: segmentation_fusion_parameter.yaml
autonomy-perception-module-main/include/: range_util.h
autonomy-perception-module-main/include/image_dimension_transfomration/: detection_transformer.h  transformer.h
autonomy-perception-module-main/include/object_detection_fusion/: class_fusion.h
autonomy-perception-module-main/include/panic_mode/: panic_mode_detector.h
autonomy-perception-module-main/include/radar_fusion/: radar_fusion.h
autonomy-perception-module-main/include/segmentation_fusion/: compare_point.h  compare_point_custom.h  erosion_dilation.h
autonomy-perception-module-main/include/test/: bbox_visualizer.h  image_visualizer.h  obstacles_visualizer.h  publisher.h  segmentation_visualizer.h
autonomy-perception-module-main/src/: range_util.cpp
autonomy-perception-module-main/src/image_dimension_transfomration/: detection_transformer.cpp  detection_transformer_node.cpp  transformer.cpp
autonomy-perception-module-main/src/panic_mode/: panic_mode_detector.cpp  panic_mode_detector_node.cpp
autonomy-perception-module-main/src/test/: bbox_visualizer.cpp  image_visualizer.cpp  obstacles_visualizer.cpp  publisher.cpp  segmentation_visualizer.cpp  visualizer_node.cpp
autonomy-perception-server-main/: README.md
image processing/otsu/: README.md  main.cpp  otsu.sln  otsu.vcxproj  otsu.vcxproj.filters
image processing/stitching/: README.md  function.cpp  header.h  main.cpp  stitching.sln  stitching.vcxproj  stitching.vcxproj.filters
ros2_camera/launch/: usb_camera_component.launch.py
