<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepstream_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="linkxavier@todo.todo">linkxavier</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>od_message</depend> -->
  <depend>autonomy_ros2_message</depend>
  <depend>ament_cmake</depend>
  <depend>PkgConfig</depend>
  <depend>ament_index_cpp</depend>
  <depend>CUDA</depend>
  <depend>parameter_manager</depend>
  <depend>common_api</depend>
  <depend>OpenCV</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
