<?xml version="1.0"?>
<package format="3">
  <name>perception_module</name>
  <version>0.0.0</version>
  <description>The perception_module package</description>

  <maintainer email="jwko-nuebility@todo.todo">jwko-nuebility</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>autonomy_ros2_message</depend>
  <depend>parameter_manager</depend>
  <depend>common_api</depend>
  <depend>pcl_ros</depend>
  <depend>yaml-cpp</depend>
  <build_depend>libpcl-all-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
